@@ -1,3 +1,15 @@
+2021-06-25  Guillaume Emont  <guijemont@igalia.com>
+
+        Unskip stress/call-apply-exponential-bytecode-size.js on most platforms
+        https://bugs.webkit.org/show_bug.cgi?id=227354
+
+        Reviewed by Yusuke Suzuki.
+
+        Instead of skipping, we increase the JIT memory size for this test on
+        platforms that have less than 64 MB by default.
+
+        * stress/call-apply-exponential-bytecode-size.js:
+
 2021-06-25  Mikhail R. Gadelha  <mikhail@igalia.com>
 
         Unskip structure-storedPrototype-should-only-assert-on-the-mutator-thread.js on arm and mips
